--- a/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.css
+++ b/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.css
@@ -17,3 +17,30 @@ h3,h6{
     
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
+
+
+ .column {
+	margin-bottom: 20px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.column .col-group {
+	/* padding: 10px; */
+	display: block;
+}
+@media only screen and ( min-width: 1025px ) {
+.column-wrap {
+	width: 1367px;
+	max-width: calc( 100% + 23px );
+	margin: 0 -11.5px;
+	overflow: hidden;
+}
+.column {
+	padding: 0 11.5px;
+	float: left;
+}
+.column-wrap .one-third {
+	width: 33.33%;
+}
+}   
