--- a/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
+++ b/src/app/administration/payment-record/payment-record-detail/payment-record-detail.component.html
@@ -6,10 +6,11 @@
         </div>
     </div>
     <div class="row mt-5">
-        <div class="col-sm-12">
-            <div class="parent">
-                <div class="div1"> 
-                    <div class="card" style= "width: 360px">
+        <div >
+            <div class="column-wrap">
+
+                <div class="column one-third"> 
+                    <div class="card col-group" style= "width: 360px">
                         <div class="card-header company-card-header">
                             <div class="row">
                                 <div class="col-6" style="font-weight: bolder;">
@@ -87,10 +88,10 @@
                 </div>
 
                 <!-- ggh -->
-                <div class="div2">
-                    <div class="row mt-5" *ngIf="bordenservicio">
+                <div class="column one-third">
+                    <div class="col-group" *ngIf="bordenservicio">
                       <div class="col-sm-12">
-                          <div class="card" style="margin-top: -48px;margin-left: -215px;">
+                          <div class="card" >
                               <div class="card-header company-card-header">
                                   <div class="row">
                                       <div class="col-6">
@@ -100,17 +101,16 @@
                               </div>
                               <div class="card-body">
                                   <div class="container">
-                                    <ag-grid-angular style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                                    <ag-grid-angular style="width: 100%; height: 380px;" class="ag-theme-alpine" [rowData]="serviceOrderList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
                                       <ag-grid-column headerName="Código" field="corden" [width]="100" [sortable]="true"></ag-grid-column>
-                                      <ag-grid-column headerName="Nombre" field="xnombre" [width]="350" [sortable]="true"></ag-grid-column>
-                                      <ag-grid-column headerName="Monto de Factura" field="mmontofactura" [width]="200" [sortable]="true"></ag-grid-column>
-                                      <ag-grid-column headerName="Tipo de Pagador" field="xtipopagador" [width]="130" [sortable]="true"></ag-grid-column>
+                                      <ag-grid-column headerName="Nombre" field="xnombre" [width]="225" [sortable]="true"></ag-grid-column>
                                   </ag-grid-angular>
                                   </div>
                               </div>
                               <br>
+                              <!-- style="margin-left: 93px;" -->
                                 <form [formGroup]="payment_form" class="parent">
-                                    <div class="col-sm-10">
+                                    <div class="col-12" >
                                         <div class="form-group">
                                             <label style="font-weight: bolder;text-align: center;">Sumatoria de Factura</label>
                                             <input type="text" formControlName="msumafactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('msumafactura').errors }" style="text-align: center;">
@@ -119,13 +119,23 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col-sm-9 mt-2" style="margin-left: 15px">
+                                            <button [disabled]="loading" class="btn company-detail-button btn-lg btn-block" type="submit" (click)="calculationBill()">
+                                                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                                                Calcular
+                                            </button>
+                                        </div>
+                                    </div>
                                 </form>
                           </div>
                       </div>
                   </div>
-                  <div class="row mt-5" *ngIf="bfiniquito">
-                    <div class="col-sm-12">
-                        <div class="card" style="margin-top: -48px;margin-left: -215px;">
+                </div>
+
+                <div class="column one-third" *ngIf="bfiniquito">
+                    <div class="col-group">
+                        <div class="card" >
                             <div class="card-header company-card-header">
                                 <div class="row">
                                     <div class="col-6">
@@ -134,32 +144,141 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <div class="container">
-                                  <ag-grid-angular style="width: 100%; height: 250px;" class="ag-theme-alpine" [rowData]="settlementList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
+                                <div class="container" style="margin-bottom: 109px">
+                                  <ag-grid-angular style="width: 100%; height: 380px;" class="ag-theme-alpine" [rowData]="settlementList" [pagination]="true" [paginationAutoPageSize]="true" rowSelection="single">
                                     <ag-grid-column headerName="Código" field="cfiniquito" [width]="100" [sortable]="true"></ag-grid-column>
-                                    <ag-grid-column headerName="Nombre" field="xnombre" [width]="350" [sortable]="true"></ag-grid-column>
-                                    <ag-grid-column headerName="Monto de Factura" field="mmontofactura" [width]="200" [sortable]="true"></ag-grid-column>
-                                    <ag-grid-column headerName="Tipo de Pagador" field="xtipopagador" [width]="130" [sortable]="true"></ag-grid-column>
-                                </ag-grid-angular>
+                                    <ag-grid-column headerName="Nombre" field="xnombre" [width]="225" [sortable]="true"></ag-grid-column>
+                                  </ag-grid-angular>
                                 </div>
                             </div>
-                            <br>
-                              <form [formGroup]="payment_form" class="parent">
-                                  <div class="col-sm-10">
-                                      <div class="form-group">
-                                          <label style="font-weight: bolder;text-align: center;">Sumatoria de Factura</label>
-                                          <input type="text" formControlName="msumafactura" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('msumafactura').errors }" style="text-align: center;">
-                                          <div *ngIf="submitted && payment_form.get('msumafactura').errors"  class="invalid-feedback">
-                                              <div *ngIf="payment_form.get('msumafactura').errors.required">{{ "EVENTS.NOTIFICATIONS.REQUIREDOBSERVATION" | translate }}</div>
-                                          </div>
-                                      </div>
-                                  </div>
-                              </form>
                         </div>
                     </div>
                 </div>
+            </div>
+            <!-- dettalle -->
+            <div class="row mt-5" *ngIf="bcalculo">
+                <div class="col-sm-12">
+                    <div class="card">
+                        <div class="card-header company-card-header">
+                            <div class="row">
+                                <div class="col-6">
+                                    Desglose de Impuestos 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <form [formGroup]="payment_form">
+                                <div class="row">
+                                    <!-- carta que refleja los impuestos -->
+                                    <div class="card" style= "width: 377px;margin-left: 23px;margin-bottom: 101px;">
+                                        <div class="card-header company-card-header">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    Impuestos Aplicados
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label style="font-weight: bolder;">Retención: <input formControlName="porcentajeretencion" style="background-color:transparent;background: inherit;border: 0px; "></label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label style="font-weight: bolder;">ISLR: <input formControlName="porcentajeimpuesto" style="background-color:transparent;background: inherit;border: 0px; "></label>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label style="font-weight: bolder;">IVA: <input formControlName="pimpuesto" style="background-color:transparent;background: inherit;border: 0px; "></label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- carta que refleja todos los montos calculados. -->
+                                    <div class="card" style= "width: 377px;margin-left: 59px">
+                                        <div class="card-header company-card-header">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    Impuestos Aplicados
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>Retención</label>
+                                                    <input type="text" formControlName="xdocidentidad" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xdocidentidad').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xdocidentidad').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>ISLR</label>
+                                                    <input type="text" formControlName="xproveedor" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xproveedor').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xproveedor').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>IVA</label>
+                                                    <input type="text" formControlName="xproveedor" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xproveedor').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xproveedor').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Carta que refleja el resumen. -->
+
+                                    <div class="card" style= "width: 377px;margin-left: 49px">
+                                        <div class="card-header company-card-header">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    Impuestos Aplicados
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="card-body">
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>Retención</label>
+                                                    <input type="text" formControlName="xdocidentidad" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xdocidentidad').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xdocidentidad').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>ISLR</label>
+                                                    <input type="text" formControlName="xproveedor" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xproveedor').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xproveedor').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12">
+                                                <div class="form-group">
+                                                    <label>IVA</label>
+                                                    <input type="text" formControlName="xproveedor" class="form-control" [ngClass]="{ 'is-invalid' : submitted && payment_form.get('xproveedor').errors }">
+                                                    <div *ngIf="submitted && payment_form.get('xproveedor').errors"  class="invalid-feedback">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!--  fin dettalle -->
         </div>
     </div>
 </div>
